Revert "Feature/snapshot integrationtest (#15)"
This reverts commit 732f8da592a42fc950f84c404bc51af630d8b5fc.
Revert "build(deps-dev): bump org.wiremock:wiremock from 3.0.1 to 3.0.3 (#16)"

This reverts commit d990f05a3e4e83a5c95ad7294ba1811482956dd6.