@@ -6,31 +6,19 @@ import io.datareplication.model.Url;
 import lombok.NonNull;
 import lombok.Value;
 
+import java.util.Collections;
 import java.util.List;
 
-/**
- * The index of a snapshot. In addition to some metadata, this primarily contains of a list of URLs to the pages that
- * make up this snapshot.
- */
 @Value
 public class SnapshotIndex {
-    /**
-     * The ID of the snapshot.
-     */
     @NonNull SnapshotId id;
-    /**
-     * The timestamp of the dataset contained in this snapshot. This is usually the time when snapshot creation started.
-     */
-    @NonNull Timestamp createdAt;
-    /**
-     * The URLs of the pages that make up this snapshot.
-     */
+    @NonNull Timestamp started;
     @NonNull List<@NonNull Url> pages;
 
-    public SnapshotIndex(@NonNull SnapshotId id, @NonNull Timestamp createdAt, @NonNull List<@NonNull Url> pages) {
+    public SnapshotIndex(@NonNull SnapshotId id, @NonNull Timestamp started, @NonNull List<@NonNull Url> pages) {
         this.id = id;
-        this.createdAt = createdAt;
-        this.pages = List.copyOf(pages);
+        this.started = started;
+        this.pages = Collections.unmodifiableList(pages);
     }
 
     public @NonNull Body toJson() {
